<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="edu.uncc.mad.group14_hw08.SignupActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fullname_label"
            android:id="@+id/fullNameLabel"
            android:padding="0dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullnameEditText"
            android:layout_below="@+id/fullNameLabel"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:paddingTop="0dp"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email_label"
            android:id="@+id/emailLabel"
            android:layout_below="@+id/fullnameEditText"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailEditText"
            android:layout_below="@+id/emailLabel"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:paddingTop="0dp"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phoneLabel"
            android:id="@+id/phoneLabel"
            android:layout_below="@+id/emailEditText"
            android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneEditText"
        android:layout_below="@id/phoneLabel"
        android:layout_marginBottom="10dp"
        android:paddingTop="0dp"
        android:singleLine="true"
        android:inputType="phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password_label"
            android:id="@+id/passwordLabel"
            android:layout_below="@+id/phoneEditText"
            android:layout_alignParentStart="true" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pwEditText"
            android:layout_alignParentStart="true"
            android:layout_below="@id/passwordLabel"
            android:layout_marginBottom="10dp"
            android:paddingTop="0dp"
            android:singleLine="true"
            android:editable="true"
            android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_conf_label"
        android:id="@+id/pwConfLabel"
        android:layout_below="@id/pwEditText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwConfEditText"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/pwConfLabel"
        android:paddingTop="0dp"
        android:singleLine="true"
        android:inputType="textPassword"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            android:id="@+id/signupButton"
            android:layout_below="@+id/pwConfEditText"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:id="@+id/cancelButton"
            android:layout_below="@+id/signupButton"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
